--- a/.pipelines/DSC-Common.yml
+++ b/.pipelines/DSC-Common.yml
@@ -276,6 +276,8 @@ stages:
         write-verbose -verbose (dir | out-string)
         write-verbose -verbose (get-location | out-string)
         write-verbose -verbose (dir ./bin | out-string)
+        write-verbose -verbose (dir ./bin/x86_64-unknown-linux-musl | out-string)
+        write-verbose -verbose (dir ./bin/x86_64-unknown-linux-musl/release | out-string)
         ./build.ps1 -PackageType tgz -Architecture x86_64-unknown-linux-musl -Release
         Copy-Item ./bin/*.tar.gz "$(ob_outputDirectory)"
       displayName: 'Build x86_64-unknown-linux-musl'
@@ -351,7 +353,7 @@ stages:
     - pwsh: |
         ./build.ps1 -Verbose -Release -Architecture $(buildName)
         ./build.ps1 -PackageType tgz -Architecture $(buildName) -Release
-        Copy-Item ./bin/*.tar.gz "$(ob_outputDirectory)"
+        Copy-Item ./bin/*.tar.gz "$(ob_outputDirectory)" -ErrorAction Ignore
         Write-Host "##vso[artifact.upload containerfolder=release;artifactname=release]$(ob_outputDirectory)/DSC-$(PackageVersion)-$(buildName).tar.gz"
       displayName: 'Build $(buildName)'
       condition: succeeded()
