Add support for adaptedResource manifest

--- a/adapters/powershell/.project.data.json
+++ b/adapters/powershell/.project.data.json
@@ -6,7 +6,8 @@
             "psDscAdapter/powershell.resource.ps1",
             "psDscAdapter/psDscAdapter.psd1",
             "psDscAdapter/psDscAdapter.psm1",
-            "powershell.dsc.resource.json"
+            "powershell.dsc.resource.json",
+            "powershell_single.dsc.resource.json"
         ],
         "Windows": [
             "psDscAdapter/win_psDscAdapter.psd1",
