--- a/.pipelines/DSC-Official.yml
+++ b/.pipelines/DSC-Official.yml
@@ -78,6 +78,7 @@ extends:
         pool:
           type: linux
         variables:
+          LinuxContainerImage: 'mcr.microsoft.com/onebranch/azurelinux/build:3.0'
           ob_restore_phase: true
           ob_outputDirectory: '$(Build.ArtifactStagingDirectory)'
           ob_sdl_sbom_enabled: false
