--- a/.pipelines/DSC-Official.yml
+++ b/.pipelines/DSC-Official.yml
@@ -100,7 +100,7 @@ extends:
             scriptLocation: inlineScript
             inlineScript: |
               $token = az account get-access-token --query accessToken --resource 499b84ac-1321-427f-aa17-267ca6975798 -o tsv
-              $vstsCommandString = "vso[task.setvariable variable=AzToken;isoutput=true]$token"
+              $vstsCommandString = "vso[task.setvariable variable=AzToken]$token"
               Write-Host "Setting token"
               Write-Host "##$vstsCommandString"
         - pwsh: |
