--- a/.pipelines/DSC-Official.yml
+++ b/.pipelines/DSC-Official.yml
@@ -107,9 +107,8 @@ extends:
             git clone https://github.com/tree-sitter/tree-sitter.git
             cd tree-sitter
             $env:CARGO_REGISTRIES_POWERSHELL_CREDENTIAL_PROVIDER = 'cargo:token'
-            $header = "Bearer $(AzToken)"
-            $env:CARGO_REGISTRIES_POWERSHELL_TOKEN = $header
-            $env:CARGO_REGISTRIES_POWERSHELL_INDEX = "sparse+https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/Cargo/index/"
+            $env:CARGO_REGISTRIES_POWERSHELL_TOKEN = "Bearer $(AzToken)"
+            $env:CARGO_REGISTRIES_POWERSHELL_INDEX = "sparse+https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell~force-auth/Cargo/index/"
             $env:CARGO_SOURCE_crates_io_REPLACE_WITH = 'POWERSHELL'
             cargo build
 
